add Buttons for listDiscs (with listing all Discs) and newDisc

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -16,6 +16,8 @@
 	    <div class="three columns">
 	    	<input value="New Book" type="button" onclick="changeContent('newbook.partial')">
 	    	<input value="List Books" type="button" onclick="listBooks()">
+	    	<input value="New Disc" type="button" onclick="changeContent('newdisc.partial')">
+	    	<input value="List Discs" type="button" onclick="listDiscs()">
 	    </div>
 	    <div class="nine columns" id="content">
 	      <h2>ShareIt</h2>
