add change buttons

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -28,6 +28,7 @@
 	       </tbody></table>
 		  <div><span id="errormessage" class="hidden error">ERROR</span></div>
 		  <input type="button" class="button-primary" id="registerButton" onclick="submitNewBook()" value="Eintragen"/>
+		  <input type="button" class="button-primary" id="changeButton" onclick="submitChangeBook()" value="&Auml;ndern"/>
 	    </div>
 	  </div>
     </div>
